--- a/html/index_css.css
+++ b/html/index_css.css
@@ -7,6 +7,8 @@ html body{
 	min-height: 100%;
 
 	background-color: 	#F8F8FF;
+
+	overflow: scroll;
 }
 
 a {
@@ -48,11 +50,20 @@ a {
 	color: white;
 }
 
+#topMini a:hover{
+	color : darkblue;
+}
+
 #topBar {
 	text-align: center;
 	height: 40px;
 	background-color: #F8F8FF;
 	border-bottom: 1px solid skyblue;
+}
+
+#topBar ul {
+	margin-right: 14%;
+	margin-left: auto;
 }
 
 #topBar ul li{
@@ -69,13 +80,17 @@ a {
 	padding-right: 30px;
 }
 
+#topBar ul li a:hover{
+	color:skyblue;
+}
+
 .top {
 	width: 100%;
 }
 
 /*----------------------------------------------*/
 #main {
-	background-color: #00BFFF;
+	background-color: skyblue;
 
 	margin:0px;
 
@@ -93,6 +108,24 @@ a {
 
 	background-color: #F8F8FF;
 }
+
+.content {
+	margin-top: 10px;
+	margin-left: 20px;
+	margin-right: 20px;
+
+	border: 1px solid black;
+	border-radius: 10px 10px 10px 10px;
+
+	padding: 10px;
+
+	width: 40%;
+}
+
+.img {
+	border-right: 2px solid blue;
+}
+
 /*----------------------------------------------*/
 
 
@@ -100,13 +133,16 @@ a {
 	position:fixed;
     bottom:0;
     width:100%;
-    height: 18px;
+    height: 17px;
 
     border-top: 1px solid gray;
 
-   	margin-bottom: 10px;
 
    	padding: 0px;
 
    	text-align: center;
+
+   	font-size: 12px;
+
+   	background-color: white;
 }
