--- a/html/login/login_css.css
+++ b/html/login/login_css.css
@@ -146,15 +146,17 @@ a {
 }
 
 #login {
-	border:1px solid skyblue;
+	margin-top: 20%;
+	margin-left : 50px;
+	margin-right: 50px;
 
-	width: 50%;
-	height: 50%;
+	padding-left: 35%;
+
+
 }
 
 #login form {
-	margin-right: auto;
-	margin-left: auto;
+		
 }
 
 /*----------------------------------------------*/
