--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,12 @@
 		<div id="top" class="top">
 			<a href="/"><p id="logo">TravelA</p></a>
 			<div id="topMini" class="top">
-				<a href="/login">Login</a>
-				<a href="/resgister">Register</a>
+				<%if(login){%>
+					<div id="login_status">logined</div>
+				<%} else {%>
+					<a href="/login">Login</a>
+					<a href="/resgister">Register</a>
+				<% } %>
 			</div>
 			<div id="topBar" class="top">
 				<ul>
