--- a/views/index_css.css
+++ b/views/index_css.css
@@ -50,6 +50,14 @@ a {
 	color: white;
 }
 
+#topMini #login_status {
+	float: right;
+	letter-spacing: 1px;
+	padding: 5px;
+	margin-right: 5px;
+	color: white;
+}
+
 #topMini a:hover{
 	color : darkblue;
 }
