--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,23 +9,37 @@
 </head>
 	<body>
 		<div id="top" class="top">
-			<a href="/"><p id="logo">TravelA</p></a>
+			<%if(s){%>
+				<a href="/?s=1"><p id="logo">TravelA</p></a>
+			<%} else {%>
+				<a href="/"><p id="logo">TravelA</p></a>
+			<% } %>
 			<div id="topMini" class="top">
-				<%if(login){%>
-					<div id="login_status">logined</div>
+				<%if(s){%>
+					<div id="login_status">LOGINED!!</div>
 				<%} else {%>
 					<a href="/login">Login</a>
-					<a href="/resgister">Register</a>
+					<a href="/register">Register</a>
 				<% } %>
 			</div>
 			<div id="topBar" class="top">
+				<%if(s){%>
 				<ul>
-					<li><a href="#" class="menu">JAPAN</a></li>
-					<li><a href="#" class="menu">AUSTRAILIA</a></li>
-					<li><a href="#" class="menu">ENGLAND</a></li>
-					<li><a href="#" class="menu">U.S.A</a></li>
-					<li><a href="#">COMMUNITY</a></li>
+					<li><a href="/japan?s=1" class="menu">JAPAN</a></li>
+					<li><a href="/austrailia?s=1" class="menu">AUSTRAILIA</a></li>
+					<li><a href="/england?s=1" class="menu">ENGLAND</a></li>
+					<li><a href="/usa?s=1" class="menu">U.S.A</a></li>
+					<li><a href="/community?s=1">COMMUNITY</a></li>
 				</ul>
+				<%} else {%>
+				<ul>
+					<li><a href="/japan" class="menu">JAPAN</a></li>
+					<li><a href="/austrailia" class="menu">AUSTRAILIA</a></li>
+					<li><a href="/england" class="menu">ENGLAND</a></li>
+					<li><a href="/usa" class="menu">U.S.A</a></li>
+					<li><a href="/community">COMMUNITY</a></li>
+				</ul>
+				<% } %>
 			</div>
 		</div>
 
@@ -33,13 +47,23 @@
 
 		<div id="main">
 			<div id="leftFloat">
+				<%if(s){%>
 				<ul>
-					<li><a href="#" class="menu">JAPAN</a></li>
-					<li><a href="#" class="menu">AUSTRAILIA</a></li>
-					<li><a href="#" class="menu">ENGLAND</a></li>
-					<li><a href="#" class="menu">U.S.A</a></li>
-					<li><a href="#">COMMUNITY</a></li>
+					<li><a href="/japan?s=1" class="menu">JAPAN</a></li>
+					<li><a href="/austrailia?s=1" class="menu">AUSTRAILIA</a></li>
+					<li><a href="/england?s=1" class="menu">ENGLAND</a></li>
+					<li><a href="/usa?s=1" class="menu">U.S.A</a></li>
+					<li><a href="/community?s=1">COMMUNITY</a></li>
 				</ul>
+				<%} else {%>
+				<ul>
+					<li><a href="/japan" class="menu">JAPAN</a></li>
+					<li><a href="/austrailia" class="menu">AUSTRAILIA</a></li>
+					<li><a href="/england" class="menu">ENGLAND</a></li>
+					<li><a href="/usa" class="menu">U.S.A</a></li>
+					<li><a href="/community">COMMUNITY</a></li>
+				</ul>
+				<% } %>
 			</div>
 			<div id="wrapper">
 				<div id="content01" class="content">
