--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -4,7 +4,7 @@
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	<meta http-equiv="Content"charset="utf-8">
 	<title>Travel Anywhere</title>
-	<link rel="stylesheet" type="text/css" href="login_css.css">
+	<link rel="stylesheet" type="text/css" href="register_css.css">
 	<base href="/html/login">
 </head>
 	<body>
@@ -30,7 +30,7 @@
 		<div id="main">
 			<div id="wrapper">
 					<div id="login">
-						<form action="/login_server" method="post">
+						<form action="/register_server" method="post">
 							<table border="0">
 								<tr>
 									<td>ID : </td>
@@ -40,9 +40,13 @@
 									<td>PASSWORD : </td>
 									<td><input type="password" size="10" name="PASSWD"></td>
 								</tr>
+								<tr> 
+									<td>NAME : </td>
+									<td><input type="text" size="4" name="NAME"></td>
+								</tr>
 							</table>
 							<br>
-							<input type="submit" value="로그인">
+							<input type="submit" value="REGISTER!!">
 						</form>
 					</div>
 				</div>
