--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -30,6 +30,7 @@
 		<div id="main">
 			<div id="wrapper">
 					<div id="login">
+						<p id="alert"><%=message%></p>
 						<form action="/register_server" method="post">
 							<table border="0">
 								<tr>
