Fixed bugs on register and login page!!

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,7 +73,7 @@
 		var windowHeight = window.innerHeight;
 		var windowWidth = window.innerWidth;
 
-		$("#main").css("width",windowWidth);
+		$(body).css("width",windowWidth);
 		$("#wrapper").css("width",windowWidth*(8/10));
 
 	</script>
