--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -30,6 +30,7 @@
 		<div id="main">
 			<div id="wrapper">
 					<div id="login">
+						<p id="alert"><%=message%></p>
 						<form action="/login_server" method="post">
 							<table border="0">
 								<tr>
