--- a/views/register/register_css.css
+++ b/views/register/register_css.css
@@ -8,7 +8,7 @@ html body{
 
 	background-color: 	#F8F8FF;
 
-	overflow: scroll;
+	overflow: hidden;
 }
 
 a {
@@ -155,8 +155,8 @@ a {
 
 }
 
-#login form {
-		
+#alert {
+	color : red;
 }
 
 /*----------------------------------------------*/
