Exported menu as module, Added menu files!!

--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -16,11 +16,11 @@
 			</div>
 			<div id="topBar" class="top">
 				<ul>
-					<li><a href="#" class="menu">JAPAN</a></li>
-					<li><a href="#" class="menu">AUSTRAILIA</a></li>
-					<li><a href="#" class="menu">ENGLAND</a></li>
-					<li><a href="#" class="menu">U.S.A</a></li>
-					<li><a href="#">COMMUNITY</a></li>
+					<li><a href="/menu/japan" class="menu">JAPAN</a></li>
+					<li><a href="/menu/austrailia" class="menu">AUSTRAILIA</a></li>
+					<li><a href="/menu/england" class="menu">ENGLAND</a></li>
+					<li><a href="/menu/usa" class="menu">U.S.A</a></li>
+					<li><a href="/menu/community">COMMUNITY</a></li>
 				</ul>
 			</div>
 		</div>
