--- a/views/menu/usa/usa.ejs
+++ b/views/menu/usa/usa.ejs
@@ -4,7 +4,7 @@
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	<meta http-equiv="Content"charset="utf-8">
 	<title>Travel Anywhere</title>
-	<link rel="stylesheet" type="text/css" href="index_css.css">
+	<link rel="stylesheet" type="text/css" href="usa_css.css">
 	<base href="/html">
 </head>
 	<body>
@@ -17,8 +17,8 @@
 						<a href="/logout">LOGOUT</a>
 					</div>
 				<%} else {%>
-					<a href="/login">LOGIN</a>
-					<a href="/register">REGISTER</a>
+					<a href="/login">Login</a>
+					<a href="/register">Register</a>
 				<% } %>
 			</div>
 			<div id="topBar" class="top">
