--- a/views/menu/japan/jp.ejs
+++ b/views/menu/japan/jp.ejs
@@ -4,15 +4,22 @@
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	<meta http-equiv="Content"charset="utf-8">
 	<title>Travel Anywhere</title>
-	<link rel="stylesheet" type="text/css" href="register_css.css">
-	<base href="/html/login">
+	<link rel="stylesheet" type="text/css" href="jp_css.css">
+	<base href="/html">
 </head>
 	<body>
 		<div id="top" class="top">
-			<a href="/"><p id="logo">TravelA</p></a>
+				<a href="/"><p id="logo">TravelA</p></a>
 			<div id="topMini" class="top">
-				<a href="/login">Login</a>
-				<a href="/register">Register</a>
+				<%if(status == 1){%>
+					<div id="login_status">
+						<a href="/myinfo">MYINFO</a>
+						<a href="/logout">LOGOUT</a>
+					</div>
+				<%} else {%>
+					<a href="/login">Login</a>
+					<a href="/register">Register</a>
+				<% } %>
 			</div>
 			<div id="topBar" class="top">
 				<ul>
@@ -28,30 +35,19 @@
 
 
 		<div id="main">
-			<div id="wrapper">
-					<div id="login">
-						<p id="alert"><%=message%></p>
-						<form action="/register_server" method="post">
-							<table border="0">
-								<tr>
-									<td>ID : </td>
-									<td><input type="text" size="10" name="ID"></td>
-								</tr>
-								<tr>
-									<td>PASSWORD : </td>
-									<td><input type="password" size="10" name="PASSWD"></td>
-								</tr>
-								<tr> 
-									<td>NAME : </td>
-									<td><input type="text" size="4" name="NAME"></td>
-								</tr>
-							</table>
-							<br>
-							<input type="submit" value="REGISTER!!">
-						</form>
-					</div>
-				</div>
+			<div id="leftFloat">
+				<ul>
+					<li><a href="/japan" class="menu">JAPAN</a></li>
+					<li><a href="/austrailia" class="menu">AUSTRAILIA</a></li>
+					<li><a href="/england" class="menu">ENGLAND</a></li>
+					<li><a href="/usa" class="menu">U.S.A</a></li>
+					<li><a href="/community">COMMUNITY</a></li>
+				</ul>
 			</div>
+			<div id="wrapper">
+				
+			</div>
+		</div>
 
 
 		<div id="footer">
@@ -63,12 +59,8 @@
 		var windowHeight = window.innerHeight;
 		var windowWidth = window.innerWidth;
 
-		$("#main").css("height",windowHeight);
-		$("#main").css("width",windowWidth);
-
-		$("#wrapper").css("height",windowHeight);
+		$(body).css("width",windowWidth);
 		$("#wrapper").css("width",windowWidth*(8/10));
-
 
 	</script>
 	</body>
