--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -60,8 +60,8 @@
 
 
 	<script> 
-		var windowHeight = window.innerHeight;
-		var windowWidth = window.innerWidth;
+		var windowHeight = window.outerHeight;
+		var windowWidth = window.outerWidth;
 
 		$("#main").css("height",windowHeight);
 		$("#main").css("width",windowWidth);
