--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -56,8 +56,8 @@
 
 
 	<script> 
-		var windowHeight = window.innerHeight;
-		var windowWidth = window.innerWidth;
+		var windowHeight = window.outerHeight;
+		var windowWidth = window.outerWidth;
 
 		$("#main").css("height",windowHeight);
 		$("#main").css("width",windowWidth);
