--- a/views/menu/community/com_css.css
+++ b/views/menu/community/com_css.css
@@ -154,20 +154,37 @@ a {
 	background-color: #F8F8FF;
 }
 
-.content {
-	margin-top: 10px;
-	margin-left: 20px;
-	margin-right: 20px;
+#contentTitle {
+	width: 90%;
+	height : 100px;
 
-	border: 1px solid black;
-	border-radius: 10px 10px 10px 10px;
+	border : 1px solid black;
 
-	padding: 10px;
+	border-radius: 15px 15px 15px 15px;
 
-	min-width: 80%;
-	max-width: 100%;
-	min-height: 20%;
-	max-height: 30%;
+	margin-left: 45px;
+	margin-top : 10px;
+
+	text-align: center;
+
+	background-image : url('../../res/comTitle.png');
+	background-position: center;
+	background-size: ;
+}
+
+#contentTitle p {
+	color : black;
+
+	font-size: 30px;
+
+	margin : 0;
+	margin-top: 20px;
+}
+
+#content {
+	border-top: 1px solid blue;
+
+	margin-top : 30px;
 }
 
 /*----------------------------------------------*/
