--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -35,15 +35,15 @@
 							<table border="0">
 								<tr>
 									<td>ID : </td>
-									<td><input type="text" size="10" name="ID"></td>
+									<td><input type="text" size="20" name="ID" placeholder="ENTER ID"></td>
 								</tr>
 								<tr>
 									<td>PASSWORD : </td>
-									<td><input type="password" size="10" name="PASSWD"></td>
+									<td><input type="password" size="20" name="PASSWD" placeholder="ENTER PASSWORD"></td>
 								</tr>
 								<tr> 
 									<td>NAME : </td>
-									<td><input type="text" size="4" name="NAME"></td>
+									<td><input type="text" size="20" name="NAME" placeholder="ENTER NAME"></td>
 								</tr>
 							</table>
 							<br>
