--- a/views/buttons/write.ejs
+++ b/views/buttons/write.ejs
@@ -4,7 +4,7 @@
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	<meta http-equiv="Content"charset="utf-8">
 	<title>Travel Anywhere</title>
-	<link rel="stylesheet" type="text/css" href="write_css.css">
+	<link rel="stylesheet" type="text/css" href="buttons/write_css.css">
 	<base href="/html/login">
 </head>
 	<body>
@@ -29,9 +29,23 @@
 
 		<div id="main">
 			<div id="wrapper">
-					
-				</div>
+				<h1 id="Write">WRITING ON <%=menu%></h1>
+				<form action='/writing_server?before=<%=menu%>' method="post">
+					<div id="writing_all">
+						<div id="writing_top">
+							<input type="text" size="100" id="writing_title" class="writing" name="writing_title" placeholder="Write Your Title">
+							<input type="text" size="100" id="author"class="writing" name="author" placeholder="Write Your NickName">
+						</div>
+						<div id="writing_mid">
+							<textarea cols="102" rows="30" class="writing" name="contents" style="resize: none;" placeholder="Write Your Contents"></textarea>
+						</div>
+						<div id="submit">
+							<input type="submit" value="Upload">
+						</div>
+					</div>
+				</form>
 			</div>
+		</div>
 
 
 		<div id="footer">
