--- a/views/menu/japan/writings.ejs
+++ b/views/menu/japan/writings.ejs
@@ -4,7 +4,7 @@
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	<meta http-equiv="Content"charset="utf-8">
 	<title>Travel Anywhere</title>
-	<link rel="stylesheet" type="text/css" href="index_css.css">
+	<link rel="stylesheet" type="text/css" href="writings_css.css">
 	<base href="/html">
 </head>
 	<body>
@@ -45,19 +45,15 @@
 				</ul>
 			</div>
 			<div id="wrapper">
-				<div id="content01" class="content">
-					<div class="img" style="width:100px;height: 180px;">
-						<img src="res/1.png">
+				<div id="content">
+					<div id="list_title">
+						<%= lists.title %>
 					</div>
-				</div>
-				<div id="content02" class="content">
-					<div class="img">
-						<img src="res/1.png" >
+					<div id="list_content">
+						<%= lists.content %>
 					</div>
-				</div>
-				<div id="content03" class="content">
-					<div class="img">
-						<img src="res/1.png" >
+					<div id="list_author">
+						<%= lists.author %>
 					</div>
 				</div>
 			</div>
