Made all page writing well,and change wrong word 'austrailia' to 'australia'!! Almost finish making this page!

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
 			<div id="topBar" class="top">
 				<ul>
 					<li><a href="/menu/japan" class="menu">JAPAN</a></li>
-					<li><a href="/menu/austrailia" class="menu">AUSTRAILIA</a></li>
+					<li><a href="/menu/australia" class="menu">AUSTRALIA</a></li>
 					<li><a href="/menu/england" class="menu">ENGLAND</a></li>
 					<li><a href="/menu/usa" class="menu">U.S.A</a></li>
 					<li><a href="/menu/community">COMMUNITY</a></li>
@@ -38,7 +38,7 @@
 			<div id="leftFloat">
 				<ul>
 					<li><a href="/menu/japan" class="menu">JAPAN</a></li>
-					<li><a href="/menu/austrailia" class="menu">AUSTRAILIA</a></li>
+					<li><a href="/menu/australia" class="menu">AUSTRALIA</a></li>
 					<li><a href="/menu/england" class="menu">ENGLAND</a></li>
 					<li><a href="/menu/usa" class="menu">U.S.A</a></li>
 					<li><a href="/menu/community">COMMUNITY</a></li>
