--- a/views/menu/japan/jp.ejs
+++ b/views/menu/japan/jp.ejs
@@ -24,7 +24,7 @@
 			<div id="topBar" class="top">
 				<ul>
 					<li><a href="/menu/japan" class="menu">JAPAN</a></li>
-					<li><a href="/menu/austrailia" class="menu">AUSTRAILIA</a></li>
+					<li><a href="/menu/australia" class="menu">AUSTRALIA</a></li>
 					<li><a href="/menu/england" class="menu">ENGLAND</a></li>
 					<li><a href="/menu/usa" class="menu">U.S.A</a></li>
 					<li><a href="/menu/community">COMMUNITY</a></li>
@@ -38,7 +38,7 @@
 			<div id="leftFloat">
 				<ul>
 					<li><a href="/menu/japan" class="menu">JAPAN</a></li>
-					<li><a href="/menu/austrailia" class="menu">AUSTRAILIA</a></li>
+					<li><a href="/menu/australia" class="menu">AUSTRALIA</a></li>
 					<li><a href="/menu/england" class="menu">ENGLAND</a></li>
 					<li><a href="/menu/usa" class="menu">U.S.A</a></li>
 					<li><a href="/menu/community">COMMUNITY</a></li>
@@ -51,8 +51,8 @@
 				<div id="content">
 					<% if(status == 1){ %>
 					<div id="buttons">
-						<input type="button" value="Write" class="write" id="write" onclick="location.href='/write'">
-						<input type="button" value="Search" class='write' id="search" onclick = "location.href='/search'">
+						<input type="button" value="Write" class="write" id="write" onclick="location.href='/write?before=japan'">
+						<input type="button" value="Search" class='write' id="search" onclick = "location.href='/search?before=japan'">
 					</div>
 					<%}%>
 					<div id="lists">
