--- a/views/buttons/write.ejs
+++ b/views/buttons/write.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
 	<meta http-equiv="Content"charset="utf-8">
 	<title>Travel Anywhere</title>
 	<link rel="stylesheet" type="text/css" href="buttons/write_css.css">
@@ -9,10 +9,17 @@
 </head>
 	<body>
 		<div id="top" class="top">
-			<a href="/"><p id="logo">TravelA</p></a>
+				<a href="/"><p id="logo">TravelA</p></a>
 			<div id="topMini" class="top">
-				<a href="/login">Login</a>
-				<a href="/register">Register</a>
+				<%if(status == 1){%>
+					<div id="login_status">
+						<a href="/myinfo">MYINFO</a>
+						<a href="/logout">LOGOUT</a>
+					</div>
+				<%} else {%>
+					<a href="/login">LOGIN</a>
+					<a href="/register">REGISTER</a>
+				<% } %>
 			</div>
 			<div id="topBar" class="top">
 				<ul>
@@ -29,6 +36,9 @@
 
 		<div id="main">
 			<div id="wrapper">
+				<% if(message) {%>
+				<p id='meesage' style="color : red; text-align: center;"><%=message%></p>
+				<% } %>
 				<h1 id="Write">WRITING ON <%=menu%></h1>
 				<form action='/writing_server?before=<%=menu%>' method="post">
 					<div id="writing_all">
@@ -39,6 +49,7 @@
 						<div id="writing_mid">
 							<textarea cols="102" rows="30" class="writing" name="contents" style="resize: none;" placeholder="Write Your Contents"></textarea>
 						</div>
+						<p name="user_id" style="visibility: hidden;"><%=user_id%></p>
 						<div id="submit">
 							<input type="submit" value="Upload">
 						</div>
