--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
 	<meta http-equiv="Content"charset="utf-8">
 	<title>Travel Anywhere</title>
 	<link rel="stylesheet" type="text/css" href="login_css.css">
@@ -51,7 +51,7 @@
 
 
 		<div id="footer">
-				JeongSeongJin All Copyrights deserved
+			JeongSeongJin All Copyrights deserved
 		</div>
 
 
