Added delete button only for who wrote their writings,but made admin can delete all

--- a/views/buttons/write.ejs
+++ b/views/buttons/write.ejs
@@ -24,7 +24,7 @@
 			<div id="topBar" class="top">
 				<ul>
 					<li><a href="/menu/japan" class="menu">JAPAN</a></li>
-					<li><a href="/menu/austrailia" class="menu">AUSTRAILIA</a></li>
+					<li><a href="/menu/australia" class="menu">AUSTRALIA</a></li>
 					<li><a href="/menu/england" class="menu">ENGLAND</a></li>
 					<li><a href="/menu/usa" class="menu">U.S.A</a></li>
 					<li><a href="/menu/community">COMMUNITY</a></li>
@@ -49,7 +49,6 @@
 						<div id="writing_mid">
 							<textarea cols="102" rows="30" class="writing" name="contents" style="resize: none;" placeholder="Write Your Contents"></textarea>
 						</div>
-						<p name="user_id" style="visibility: hidden;"><%=user_id%></p>
 						<div id="submit">
 							<input type="submit" value="Upload">
 						</div>
@@ -73,7 +72,6 @@
 
 		$("#wrapper").css("height",windowHeight);
 		$("#wrapper").css("width",windowWidth*(8/10));
-
 
 	</script>
 	</body>
