--- a/views/menu/community/writings.ejs
+++ b/views/menu/community/writings.ejs
@@ -52,9 +52,7 @@
 					<div id="list_author">
 						Author : <%= lists.author %>
 					</div>
-					<div id="list_content">
-						<%= lists.content %>
-					</div>
+					<textarea id="list_content" readonly="readonly" style="resize: none;"><%= lists.content %></textarea>
 				</div>
 			</div>
 		</div>
