Added Naver Smart Editor api!!

--- a/views/buttons/write_css.css
+++ b/views/buttons/write_css.css
@@ -157,6 +157,10 @@ a {
 #writing_all {
 	margin-left: 150px;
 }
+
+#submit {
+	margin-bottom: 20px;
+}
 /*----------------------------------------------*/
 
 
