--- a/views/buttons/write.ejs
+++ b/views/buttons/write.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
-	<script type="application/x-javascript" src="../../Api/se2/js/service/huskyESCreator.js"></script>
+	<script type="text/javascript" src="../Api/se2/js/service/HuskyEZCreator.js"></script>
 	<meta http-equiv="Content"charset="utf-8">
 	<title>Travel Anywhere</title>
 	<link rel="stylesheet" type="text/css" href="buttons/write_css.css">
@@ -41,17 +41,36 @@
 				<p id='meesage' style="color : red; text-align: center;"><%=message%></p>
 				<% } %>
 				<h1 id="Write">WRITING ON <%=menu%></h1>
-				<form action='/writing_server?before=<%=menu%>' method="post">
+				<form action='/writing_server?before=<%=menu%>' id="frm" method="post">
 					<div id="writing_all">
 						<div id="writing_top">
 							<input type="text" size="100" id="writing_title" class="writing" name="writing_title" placeholder="Write Your Title">
 							<input type="text" size="100" id="author"class="writing" name="author" placeholder="Write Your NickName">
 						</div>
 						<div id="writing_mid">
-							<textarea cols="102" rows="30" class="writing" name="contents" id="contents" style="resize: none;" placeholder="Write Your Contents"></textarea>
+							<textarea cols="102" rows="30" class="writing" name="contents" id="contents" style="resize: none;" placeholder="Write Your Contents">Write Your Contents!</textarea>
+							<script type="text/javascript">
+								var oEditors = [];
+								nhn.husky.EZCreator.createInIFrame({
+								    oAppRef: oEditors,
+								    elPlaceHolder: "contents",
+								    sSkinURI: "../Api/se2/SmartEditor2Skin.html",
+								    htParams : {
+								    	bUseVerticalResizer : false,
+								    	bUseModeChanger : false,
+								    },
+								    fCreator: "createSEditor2"
+								});
+								$("#uploadButton").click(function(){
+									//id가 smarteditor인 textarea에 에디터에서 대입
+									editor_object.getById["contents"].exec("UPDATE_CONTENTS_FIELD", []);			         
+									// 이부분에 에디터 validation 검증
+									$("#frm").submit();
+								});
+							</script>
 						</div>
 						<div id="submit">
-							<input type="submit" value="Upload">
+							<button id="uploadButton">Upload</button>
 						</div>
 					</div>
 				</form>
@@ -64,9 +83,12 @@
 		</div>
 
 
-	<script> 
+	<script type="text/javascript"> 
 		var windowHeight = window.outerHeight;
 		var windowWidth = window.outerWidth;
+
+		$("body").css('width',windowWidth);
+		$("body").css('max-height',windowHeight*1.3)
 
 		$("#main").css("height",windowHeight);
 		$("#main").css("width",windowWidth);
@@ -74,15 +96,7 @@
 		$("#wrapper").css("height",windowHeight);
 		$("#wrapper").css("width",windowWidth*(8/10));
 
-		$(function(){
-			nhn.husky.EZCreator.createInIFrame({
-				oAppRef : oEditors,
-				elPlaceholder : "contents",
-				sSkinURL : "../../Api/se2/SmartEditor2Skin.html",
-				fCreator : "createSEditor2",
-			})
-		})
-
+		
 	</script>
 	</body>
 </html>
