Deleted all writings page in menu, made only one writings page

--- a/views/menu/community/com.ejs
+++ b/views/menu/community/com.ejs
@@ -57,7 +57,7 @@
 					<%}%>
 					<div id="lists">
 						<% for(var i=0; i< lists.length;i++){ %>
-						<div id='list_title'><a href="/menu/community/writings?which=<%=lists[i].title %>"><%= lists[i].title %></a></div>
+						<div id='list_title'><a href="/writings?which=<%=lists[i].title %>&before=community"><%= lists[i].title %></a></div>
 						<% } %>
 					</div>	
 				</div>
