--- a/views/menu/japan/jp.ejs
+++ b/views/menu/japan/jp.ejs
@@ -57,7 +57,7 @@
 					<%}%>
 					<div id="lists">
 						<% for(var i=0; i< lists.length;i++){ %>
-						<div id='list_title'><a href="/menu/japan/writings?which=<%=lists[i].title %>"><%= lists[i].title %></a></div>
+						<div id='list_title'><a href="/writings?which=<%=lists[i].title%>&before=japan"><%= lists[i].title %></a></div>
 						<% } %>
 					</div>	
 				</div>
