--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,20 +48,8 @@
 				</ul>
 			</div>
 			<div id="wrapper">
-				<div id="content01" class="content">
-					<div class="img" style="width:100px;height: 180px;">
-						<img src="res/1.png">
-					</div>
-				</div>
-				<div id="content02" class="content">
-					<div class="img">
-						<img src="res/1.png" >
-					</div>
-				</div>
-				<div id="content03" class="content">
-					<div class="img">
-						<img src="res/1.png" >
-					</div>
+				<div id="content" onmouseover="this.style.backgroundimage='res/index_title.png';">
+					<h1 onmouseover="this.style.color='blue';" onmouseleave="this.style.color='skyblue';"> Welcome to Travel Anywhere!! </h1>
 				</div>
 			</div>
 		</div>
@@ -79,7 +67,7 @@
 		$('body').css("width",windowWidth);
 		$("#wrapper").css("width",windowWidth*(8/10));
 
-		$("#content").css("min-height",windowHeight);
+		$("#wrapper").css("min-height",windowHeight);
 
 		$("#lists").css("min-height",windowHeight);
 
