Combined button folder and writings folder, and fixed error of uploading and deleting cover image

--- a/views/writings/write.ejs
+++ b/views/writings/write.ejs
@@ -5,7 +5,7 @@
 	<script type="text/javascript" src="../Api/se2/js/HuskyEZCreator.js"></script>
 	<meta http-equiv="Content"charset="utf-8">
 	<title>Travel Anywhere</title>
-	<link rel="stylesheet" type="text/css" href="buttons/write_css.css">
+	<link rel="stylesheet" type="text/css" href="writings/write_css.css">
 	<base href="/html/login">
 </head>
 	<body>
