--- a/views/writings/writings_css.css
+++ b/views/writings/writings_css.css
@@ -164,6 +164,10 @@ a {
 	background-color: dodgerblue;
 }
 
+#coverImage {
+	float: right;
+}
+
 #list_title {
 	border-bottom: 1px solid black;
 	border-top: 1px solid black;
