Fixed the error, All pages doesn't change whether the browser's size change

--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -59,6 +59,8 @@
 		var windowHeight = window.outerHeight;
 		var windowWidth = window.outerWidth;
 
+		$('body').css("width",windowWidth);
+
 		$("#main").css("height",windowHeight);
 		$("#main").css("width",windowWidth);
 
