--- a/views/myinfo/myinfo.ejs
+++ b/views/myinfo/myinfo.ejs
@@ -1,36 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
-	<meta http-equiv="Content"charset="utf-8">
-	<title>Travel Anywhere</title>
-	<link rel="stylesheet" type="text/css" href="myinfo_css.css">
-	<base href="/html/login">
-</head>
-	<body>
-		<div id="top" class="top">
-				<a href="/"><p id="logo">TravelA</p></a>
-			<div id="topMini" class="top">
-				<%if(status == 1){%>
-					<div id="login_status">
-						<a href="/myinfo">MYINFO</a>
-						<a href="/logout">LOGOUT</a>
-					</div>
-				<%} else {%>
-					<a href="/login">Login</a>
-					<a href="/register">Register</a>
-				<% } %>
-			</div>
-			<div id="topBar" class="top">
-				<ul>
-					<li><a href="/menu/japan" class="menu">JAPAN</a></li>
-					<li><a href="/menu/australia" class="menu">AUSTRALIA</a></li>
-					<li><a href="/menu/england" class="menu">ENGLAND</a></li>
-					<li><a href="/menu/usa" class="menu">U.S.A</a></li>
-					<li><a href="/menu/community">COMMUNITY</a></li>
-				</ul>
-			</div>
-		</div>
+<!DOCTYPE html> <html> <head>     <script
+src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"
+type="text/javascript"></script>     <meta http-
+equiv="Content"charset="utf-8">     <title>Travel Anywhere</title>     <link
+rel="stylesheet" type="text/css" href="myinfo_css.css">     <base
+href="/html/login"> </head>     <body>         <div id="top" class="top">
+<a href="/"><p id="logo">TravelA</p></a>             <div id="topMini"
+class="top">                 <%if(status == 1){%>                     <div
+id="login_status">                         <a href="/myinfo">MYINFO</a>
+<a href="/logout">LOGOUT</a>                     </div>                 <%}
+else {%>                     <a href="/login">Login</a>                     <a
+href="/register">Register</a>                 <% } %>             </div>
+<div id="topBar" class="top">                 <ul>                     <li><a
+href="/menu/japan" class="menu">JAPAN</a></li>                     <li><a
+href="/menu/australia" class="menu">AUSTRALIA</a></li>
+<li><a href="/menu/england" class="menu">ENGLAND</a></li>
+<li><a href="/menu/usa" class="menu">U.S.A</a></li>                     <li><a
+href="/menu/community">COMMUNITY</a></li>                 </ul>
+</div>         </div>
 
 
 
@@ -63,6 +49,8 @@
 	<script> 
 		var windowHeight = window.outerHeight;
 		var windowWidth = window.outerWidth;
+
+		$('body').css("width",windowWidth);
 
 		$("#main").css("height",windowHeight);
 		$("#main").css("width",windowWidth);
