--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -63,6 +63,8 @@
 		var windowHeight = window.outerHeight;
 		var windowWidth = window.outerWidth;
 
+		$('body').css("width",windowWidth);
+
 		$("#main").css("height",windowHeight);
 		$("#main").css("width",windowWidth);
 
