--- a/views/menu/australia/aus.ejs
+++ b/views/menu/australia/aus.ejs
@@ -17,8 +17,8 @@
 						<a href="/logout">LOGOUT</a>
 					</div>
 				<%} else {%>
-					<a href="/login">Login</a>
-					<a href="/register">Register</a>
+					<a href="/login">LOGIN</a>
+					<a href="/register">REGISTER</a>
 				<% } %>
 			</div>
 			<div id="topBar" class="top">
