--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -11,8 +11,8 @@
 		<div id="top" class="top">
 			<a href="/"><p id="logo">TravelA</p></a>
 			<div id="topMini" class="top">
-				<a href="/login">Login</a>
-				<a href="/register">Register</a>
+				<a href="/login">LOGIN</a>
+				<a href="/register">REGISTER</a>
 			</div>
 			<div id="topBar" class="top">
 				<ul>
